# safeexec

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  EXAMPLES  EXAMPLES-CHROOT  EXAMPLES-ETC  Makefile  README  README.md  chown.cmake  error.c  error.h  memusage.h  os-detect.c  safe.c  safe.h  safeexec.c  safeexec.h  setlimit.c  setlimit.h  setlimits.h
contrib/: apparmor.profile  usage.out
platform/bsd/: memusage.c  setlimits.c
platform/linux/: memusage.c  setlimits.c
tests/: .gitignore  Makefile  browse.py  driver.rb  encodestuff.py  execute.sh  file.c  forever  forever.c  fork.c  fork.py  hello  io.c  ls-pwd.py  memory.py  mle.c  ole.c  procname.py  readable.py  return.c  rlimit.py  secret.txt  sleep.c  spam.py  stderr.py  test-mle.c  test-read.c  test-stderr.c  test-tle.c  test-write.c  userinfo.py  writeable.py  wtle.c
tests/usage/: can-not-fork.txt  file-write-attempt.txt  memory-limit-exceeded.txt  nonzero-exit-code.txt  output-limit-exceeded.txt  read-stdinput.txt  timi-limit-exceeded.txt  wall-time-limit-exceeded.txt
